FEAT/adequa identidade visual e implementa tema claro/escuro

--- a/index.html
+++ b/index.html
@@ -4,6 +4,22 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/assets/favicon/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script>
+      (function() {
+        const savedTheme = localStorage.getItem("theme") || "light";
+        const prefersDark = window.matchMedia("(prefers-color-scheme: dark)").matches;
+        const theme = savedTheme === "system" ? (prefersDark ? "dark" : "light") : savedTheme;
+        document.documentElement.classList.add(theme);
+        // Aplicar uma classe que previna transições durante o carregamento inicial
+        document.documentElement.classList.add('no-transitions');
+        window.addEventListener('load', function() {
+          // Remover a classe após o carregamento completo para permitir transições
+          setTimeout(function() {
+            document.documentElement.classList.remove('no-transitions');
+          }, 100);
+        });
+      })();
+    </script>
     <meta
       name="description"
       content="Marketstack Explorer - Pesquise e analise dados históricos de ações utilizando a API Marketstack"
