STYLE/ajusta estilização da navbar

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </script>
     <meta
       name="description"
-      content="Marketstack Explorer - Pesquise e analise dados históricos de ações utilizando a API Marketstack"
+      content="Tivix Finmarket Explorer - Pesquise e analise dados históricos de ações utilizando nosso Finmarket Explorer"
     />
     <meta name="theme-color" content="#2563eb" />
     <meta name="color-scheme" content="light dark" />
@@ -28,7 +28,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-    <meta name="apple-mobile-web-app-title" content="Marketstack Explorer" />
+    <meta name="apple-mobile-web-app-title" content="Tivix Finmarket Explorer" />
     
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
@@ -37,7 +37,7 @@
     <meta name="msapplication-TileColor" content="#2563eb">
     
     <link rel="preconnect" href="https://api.marketstack.com" />
-    <title>Marketstack Explorer</title>
+    <title>Tivix Finmarket Explorer</title>
   </head>
   <body>
     <div id="root"></div>
