--- a/src/meta-tags.html
+++ b/src/meta-tags.html
@@ -1,5 +1,5 @@
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
-<link rel="apple-touch-icon" href="/favicon/apple-touch-icon.png">
-<link rel="mask-icon" href="/favicon/safari-pinned-tab.svg" color="#2563eb">
-<meta name="msapplication-TileColor" content="#2563eb">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png" />
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png" />
+<link rel="apple-touch-icon" href="/favicon/apple-touch-icon.png" />
+<link rel="mask-icon" href="/favicon/safari-pinned-tab.svg" color="#2563eb" />
+<meta name="msapplication-TileColor" content="#2563eb" />
